--- a/frontend/public/styles/styles.css
+++ b/frontend/public/styles/styles.css
@@ -4,19 +4,74 @@ body {
   background-color: white;
 }
 
+.wrapper {
+  display: flex;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #f0f0f0;
+  padding: 0px ;
+}
+.back-link {
+  text-decoration: none;
+  font-size: 18px;
+  color: #757575;
+  display: flex;
+  align-items: center;
+  margin-top: 0; /* กำหนดให้ชิดด้านบน */
+}
+.back-link:hover {
+  color: #c30e2f; /* เปลี่ยนสีข้อความเมื่อโฮเวอร์ */
+}
+
+.arrow-icon path {
+  fill: #515151; /* สีปกติของลูกศร */
+  transition: fill 0.3s;
+}
+
+.back-link:hover .arrow-icon path {
+  fill: #c30e2f; /* เปลี่ยนเป็นสีแดงเมื่อโฮเวอร์ */
+}
+
+.sidebar h2 {
+  color: #7c0017;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  margin-bottom: 10px;
+}
+
+.sidebar ul li a {
+  color: #757575;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.sidebar ul li a:hover {
+  color: #c30e2f;
+}
+
 .container {
-  width: 100%;
-  height: 100%;
+  flex: 1;
   max-width: 800px;
-  margin: 0 auto;
   padding: 20px;
+  margin: 0 auto;
 }
 
 .topic {
   color: #7c0017;
   font-size: 32px;
   font-weight: 600;
-  text-align: center;
+  text-align: left;
   margin-top: 20px;
 }
 
