fix: change font style

--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,6 +1,9 @@
+*{
+  font-family: "Noto Sans Thai", sans-serif !important;
+}
 body {
   margin: 0;
-  font-family: Roboto, sans-serif;
+  font-family: "Noto Sans Thai", sans-serif !important;
   background-color: white;
 }
 
