--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -15,7 +15,7 @@ body {
 .sidebar {
   width: 350px; /* ขยายความกว้างของ sidebar ให้ใหญ่ขึ้น */
   background-color: #f0f0f0;
-  padding: 25px; /* เพิ่ม padding ให้กับ sidebar */
+  padding-left: 2%; /* เพิ่ม padding ให้กับ sidebar */
 }
 
 .back-link {
@@ -27,11 +27,11 @@ body {
   margin-top: 0;
 }
 
-.sidebar h2 {
-  color: #7c0017;
+.sidebar h4 {
   font-size: 26px;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  padding-left: 2%;
 }
 
 .back-link:hover svg path {
@@ -60,8 +60,9 @@ body {
 
 .container {
   flex: 1;
-  max-width: 750px;
-  padding: 25px;
+  max-width: 100%;
+  padding-right: 8%;
+  padding-left: 8%;
   margin: 0 auto;
 }
 
@@ -70,14 +71,15 @@ body {
   font-size: 44px;
   font-weight: bold;
   text-align: left;
-  margin-top: 25px;
+  margin-top: 60px;
+  margin-bottom: 10px;
 }
 
 .divider {
   width: 100%;
   height: 3px;
   background: #fbd13f;
-  margin: 25px 0;
+  margin-bottom: 3.5%;
 }
 
 .main-form {
@@ -96,6 +98,12 @@ body {
   flex: 1;
 }
 
+/* .form-row > :first-child {
+  margin-right: 20px;
+}
+.form-row > :last-child {
+  margin-left: 20px;
+} */
 .form-label {
   color: black;
   font-size: 22px;
@@ -109,7 +117,7 @@ body {
 
 .form-input {
   width: 100%;
-  padding: 16px;
+  padding: 8px;
   font-size: 22px;
   border: 1px solid #b4b4b4;
   border-radius: 10px;
