--- a/frontend/public/template/template.html
+++ b/frontend/public/template/template.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thammasat University Form Selection</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/template.css">
 </head>
 
 <body>
