--- a/frontend/public/css/template.css
+++ b/frontend/public/css/template.css
@@ -1,70 +1,72 @@
 * {
-    font-family: "Noto Sans Thai", sans-serif !important;
-  }
+  font-family: "Noto Sans Thai", sans-serif !important;
+}
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    height: 100vh;
-    background-color: #f5f5f5;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  height: 100vh;
+  background-color: #ffffff;
 }
 
 .content {
-    flex: 1;
-    padding: 80px;
+  flex: 1;
+  padding: 80px;
+  margin-left: 405px;
 }
 
 .content h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
+  font-size: 35px;
+  margin-bottom: 4px;
 }
 
 .content p {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 30px;
+  margin-top: 10px;
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 50px;
 }
 
 .form-card {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .form-card h2 {
-    font-size: 18px;
-    margin: 0;
-    color: #333;
+  font-size: 18px;
+  margin: 0;
+  color: #333;
 }
 
 .form-card p {
-    font-size: 14px;
-    color: #666;
-    margin: 5px 0 0;
+  font-size: 14px;
+  color: #666;
+  margin: 5px 0 0;
 }
 
 .form-card button {
-    background-color: #d32f2f;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+  background-color: #d32f2f;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .form-card button:hover {
-    background-color: #b71c1c;
-    color: #f0f0f0;
+  background-color: #b71c1c;
+  color: #ffffff;
 }
 
 .form-card button:active {
-    background-color: #7C0017;
-    color: #ffffff;
+  background-color: #7C0017;
+  color: #ffffff;
 }
