--- a/frontend/public/css/loginpage_styles.css
+++ b/frontend/public/css/loginpage_styles.css
@@ -112,12 +112,20 @@
 }
 
 .title-container h1 {
+    margin-top: 10px;
     margin-right: 10px; /* เพิ่มระยะห่างระหว่างคำว่า LOGIN กับรูป */
 }
 
 .logo {
     width: 70px; /* ปรับขนาดรูปตามที่ต้องการ */
     height: auto;
+}
+
+#password-icon {
+  width: 24px; /* ความกว้างของรูป */
+  height: 24px; /* ความสูงของรูป */
+  margin-top: 10px;
+  cursor: pointer; /* เปลี่ยน cursor เป็น pointer เมื่อ hover */
 }
 
 
@@ -134,7 +142,6 @@
   z-index: 1;
 }
 
-/* จัดตำแหน่ง Popup ให้อยู่กึ่งกลาง */
 .popup {
   position: fixed;
   top: 50%;
@@ -143,13 +150,13 @@
   padding: 20px;
   width: 300px; /* กำหนดความกว้างตามต้องการ */
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 2px solid red; /* เปลี่ยนสีกรอบเป็นสีแดง */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   z-index: 2; /* ทำให้ popup อยู่เหนือ overlay */
+  text-align: center; /* จัดข้อความให้อยู่ตรงกลาง */
 }
 
-/* ปุ่ม close ที่อยู่มุมขวาบน */
 .close {
   position: absolute;
   top: 10px;
@@ -159,7 +166,6 @@
   color: #333;
 }
 
-/* ทำให้ Status เป็นสีแดง */
 .red-text {
   display: inline;
   color: red;
@@ -168,6 +174,7 @@
 
 .error-container {
   display: flex;
+  justify-content: center; /* จัดข้อความให้อยู่กลาง */
   align-items: baseline;
   margin-top: 10px;
 }
