--- a/frontend/public/css/form_styles.css
+++ b/frontend/public/css/form_styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .sidebar h4 {
-  font-size: 26px;
+  font-size: 28px;
   font-weight: bold;
   margin-bottom: 30px;
   padding-left: 2%;
@@ -61,25 +61,25 @@ body {
 .container {
   flex: 1;
   max-width: 100%;
-  padding-right: 8%;
-  padding-left: 8%;
+  padding-right: 5%;
+  padding-left: 5%;
   margin: 0 auto;
 }
 
 .topic {
   color: #7c0017;
-  font-size: 44px;
+  font-size: 48px;
   font-weight: bold;
   text-align: left;
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 10px;
 }
 
 .divider {
   width: 100%;
-  height: 3px;
+  height: 2.5px;
   background: #fbd13f;
-  margin-bottom: 3.5%;
+  margin-bottom: 4%;
 }
 
 .main-form {
@@ -89,24 +89,30 @@ body {
 
 .form-row {
   display: flex;
-  gap: 20px;
+  gap: 70px;
+  flex-wrap: wrap;
+}
+
+.form-row-3 {
+  display: flex;
+  gap: 30px;
   flex-wrap: wrap;
 }
 
 .form-group {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   flex: 1;
 }
 
 /* .form-row > :first-child {
   margin-right: 20px;
 }
-.form-row > :last-child {
+.form-row > :last-child { 
   margin-left: 20px;
 } */
 .form-label {
   color: black;
-  font-size: 22px;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -117,7 +123,8 @@ body {
 
 .form-input {
   width: 100%;
-  padding: 8px;
+  padding: 5px;
+  margin-top:11px;
   font-size: 22px;
   border: 1px solid #b4b4b4;
   border-radius: 10px;
