--- a/frontend/public/template/template.html
+++ b/frontend/public/template/template.html
@@ -36,9 +36,9 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="#">คำร้องของฉัน</a>
+        <a href="/index.html">คำร้องของฉัน</a>
         <a href="#">แบบร่าง</a>
-        <a href="#">สร้างคำร้อง</a>
+        <a href="/template/template.html">สร้างคำร้อง</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
