--- a/frontend/public/template/template.html
+++ b/frontend/public/template/template.html
@@ -12,6 +12,7 @@
     <title>Thammasat University Form Selection</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/template.css" />
+    <link rel="stylesheet" href="/css/dashboard.css">
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
